# llmlint

./: .editorconfig  .gitattributes  .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml  gh-secrets.json  justfile  llmlint.yml  pyproject.toml  release-plz.toml  rust-toolchain.toml  screencomp.toml
.claude/: settings.json
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: bench.yml  ci.yml  live-claude.yml  live.yml  release-plz.yml  release.yml  visual-docs.yml  win-color.yml
assets/: config_lint.yml  default_template.md  init.llmlint.yml  llmlint.schema.json
benches/: AGENTS.md  engine.rs  engine_allocs.rs
benches/support/: mod.rs
docs/design/: interactive-progress.md
pr-127/x86_64/: index.html
pr-44/x86_64/: index.html
pr-81/x86_64/: index.html
screenshots/: AGENTS.md
screenshots/fixture/: llmlint.yml  verdicts.json
screenshots/fixture/multijudge/: llmlint.yml  verdicts.json
screenshots/fixture/multijudge/src/: db.rs
screenshots/fixture/src/: users.rs
scripts/: bench-instructions.sh  bench.sh  demo-gif.py  install.sh  live-all.sh  live-claude.sh  live-codex.sh  live-copilot.sh  live-crush.sh  live-cursor.sh  live-goose.sh  live-lib.sh  live-opencode.sh  live-qwen.sh  profile.sh  screenshots.sh  session-setup.sh  setup-check.sh  setup-lib.sh  setup.sh  win-console-color.ps1
shots/baseline/: x86_64.json
src/: cli.rs  errors.rs  lib.rs  main.rs
src/commands/: check_ignores.rs  config.rs  doctor.rs  history.rs  ignores.rs  init.rs  lint.rs  lint_config.rs  mod.rs  progress.rs  validate.rs  version_bump.rs  where_.rs
src/domain/: applicability.rs  attribution.rs  config.rs  config_schema.rs  cost.rs  diffmodel.rs  ignore.rs  mod.rs  plan.rs  report.rs  schema.rs  template.rs  verdict.rs  version.rs  versionbump.rs  vote.rs
src/io/: assets.rs  configfs.rs  diff.rs  env.rs  files.rs  history.rs  mod.rs  oneharness.rs  plugins.rs  terminal.rs
tests/: AGENTS.md
tests/e2e/: main.rs
tests/support/: mock_oneharness.rs
